--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" type="text/css" href="css/jquery.mobile.theme-1.4.5.min.css" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     
-    <title>Hello World</title>
+    <title>EcoDriving Challange</title>
 </head>
 
 <body>
